# GammaSpecLab

./: CMakeLists.txt  README.md  var_needed.h
api/: API.cpp  API.h
baseline/: AlsBaseline.h  BinBaseline.cpp  BinBaseline.h
data/: Co-2106.TKA  nuclide_library.txt
driver/: GammaMBibSearchDriver.cpp  GammaMBibSearchTest.cpp
finding/: GammaMBibSearch.cpp  GammaMBibSearch.h
models/: BibSearchCtx.h  Bin.h  EC.h  FWHMC.h  FitOut.h  LinearBGCtx.h  Nuclid.h  Peak.h
nuclides/: NuclidLibrary.h
src/: CMakeLists.txt  main.cpp
src/api/: API.cpp  API.h
src/baseline/: AlsBaseline.cpp  BinBaseline.cpp  BinBaseline.h
src/driver/: GammaMBibSearchDriver.cpp  GammaMBibSearchTest.cpp  GammaMBibSearchTest.h  SecondDSearchTest.cpp  SecondDSearchTest.h
src/finding/: GammaMBibSearch.cpp  GammaMBibSearch.h  SecondDerivateSearch.cpp  SecondDerivateSearch.h  temp.txt
src/models/: Bin.h
src/models/cal/: EC.h  FWHMC.h
src/models/ctx/: BibSearchCtx.h  SecDervCtx.h
src/models/elements/: Bin.h  Peak.h
src/nuclides/: NuclidLibrary.cpp  NuclidLibrary.h
